--- a/composer.json
+++ b/composer.json
@@ -41,7 +41,9 @@
             "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::prepareDeploymentTarget"
         ],
         "post-install-cmd": [
-            "@symfony-scripts"
+            "@symfony-scripts",
+            "php bin/console doctrine:database:create",
+            "php bin/console doctrine:schema:update --force"
         ],
         "post-update-cmd": [
             "@symfony-scripts"
