--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -48,16 +48,13 @@ doctrine:
         dbname: '%database_name%'
         user: '%database_user%'
         password: '%database_password%'
+        server_version: '%database_server_version%'
         charset: utf8mb4
         default_table_options:
             charset: utf8mb4
             collate: utf8mb4_general_ci
-        # if using pdo_sqlite as your database driver:
-        #   1. add the path in parameters.yml
-        #     e.g. database_path: "%kernel.root_dir%/../var/data/data.sqlite"
-        #   2. Uncomment database_path in parameters.yml.dist
-        #   3. Uncomment next line:
-        #path: '%database_path%'
+        mapping_types:
+            enum: string
 
     orm:
         auto_generate_proxy_classes: '%kernel.debug%'
