--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -7,6 +7,8 @@ imports:
 # http://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
     locale: de
+    profile_image_path: '%kernel.root_dir%/../web/images/users/profile'
+    profile_image_web_path: '/images/users/profile'
 
 framework:
     #esi: ~
@@ -20,7 +22,7 @@ framework:
     validation: { enable_annotations: true }
     #serializer: { enable_annotations: true }
     templating:
-        engines: ['php']
+        engines: ['php', 'twig']
     default_locale: '%locale%'
     trusted_hosts: ~
     trusted_proxies: ~
