--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -7,8 +7,6 @@ imports:
 # http://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
     locale: de
-    profile_image_path: '%kernel.root_dir%/../web/images/users/profile'
-    profile_image_web_path: '/images/users/profile'
 
 framework:
     #esi: ~
@@ -22,7 +20,7 @@ framework:
     validation: { enable_annotations: true }
     #serializer: { enable_annotations: true }
     templating:
-        engines: ['php', 'twig']
+        engines: ['php']
     default_locale: '%locale%'
     trusted_hosts: ~
     trusted_proxies: ~
