--- a/composer.json
+++ b/composer.json
@@ -43,8 +43,7 @@
         "post-install-cmd": [
             "@symfony-scripts",
             "php bin/console doctrine:database:create",
-            "php bin/console doctrine:schema:update --force",
-            "php bin/console app:sync-database"
+            "php bin/console doctrine:schema:update --force"
         ],
         "post-update-cmd": [
             "@symfony-scripts"
