--- a/composer.json
+++ b/composer.json
@@ -44,7 +44,8 @@
             "@symfony-scripts",
             "php bin/console doctrine:database:create",
             "php bin/console doctrine:schema:update --force",
-            "php bin/console app:sync-database"
+            "php bin/console app:sync-database",
+            "ln -s app/Resources/public/ web/resources"
         ],
         "post-update-cmd": [
             "@symfony-scripts"
